syntax = "proto3";
package checkers.checkers;

option go_package = "checkers/x/checkers/types";

message SystemInfo {
  uint64 nextId = 1;
  string fifoHeadIndex = 2; // Will contain the index of the game at the head
  string fifoTailIndex = 3; // Will contain the index of the game at the tail
}

message StoredGame {
  string index = 1;
  string board = 2;
  string turn = 3;
  string black = 4;
  string red = 5;
  uint64 moveCount = 6;
  string beforeIndex = 7; // Pertains to the FIFO. Toward head
  string afterIndex = 8; // Pertains to the FIFO. Toward tail
  string deadline = 9;
}